static/global.css
/* ----- GLOBAL VARIABLES ----- */

:root {

	/* Global Units */
	--s1: 1px;
	--s2: 2px;
	--s3: 3px;
	--s4: 4px;
	--s5: 5px;
	--s10: calc(var(--s100) * .1);
	--s15: calc(var(--s100) * .15);
	--s20: calc(var(--s100) * .2);
	--s25: calc(var(--s100) * .25);
	--s33: calc(var(--s100) * .33);
	--s50: calc(var(--s100) * .5);
	--s66: calc(var(--s100) * .66);
	--s75: calc(var(--s100) * .75);
	--s100: 2.75vh;
	--s110: calc(var(--s100) * 1.1);
	--s125: calc(var(--s100) * 1.25);
	--s150: calc(var(--s100) * 1.5);
	--s175: calc(var(--s100) * 1.75);
	--s200: calc(var(--s100) * 2);
	--s225: calc(var(--s100) * 2.25);
	--s250: calc(var(--s100) * 2.5);
	--s300: calc(var(--s100) * 3);
	--s400: calc(var(--s100) * 4);
	--s500: calc(var(--s100) * 5);
	--s600: calc(var(--s100) * 6);
	--s700: calc(var(--s100) * 7);
	--s800: calc(var(--s100) * 8);
	--s900: calc(var(--s100) * 9);
	--s1000: calc(var(--s100) * 10);
	--radius: 0;

	/* Global Colors */
	--crt-red: rgba(127,0,0,0.5);
	--crt-green: rgba(0,127,0,0.5);
	--crt-blue: rgba(0,0,127,0.5);
	--rgb-background: linear-gradient(rgba(18, 16, 16, 0) 100%, rgba(0, 0, 0, 0.25) 100%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
	--pri-color: rgba(0, 255, 0, .9);
	--pri-color-trans: rgba(0, 255, 0, .5);
	--pri-box-shadow: 0 0 var(--std-margin) calc(var(--std-margin)/2) var(--pri-color-trans);
	--sec-color: rgba(15, 30, 15, .85);
	--sec-color-trans: rgba(15, 30, 15, .5);
	--ter-color: rgba(220, 20, 60, .85);
	--ter-color-semi: rgba(220, 20, 60, .5);
	--ter-color-trans: rgba(220, 20, 60, .15);
	--ter-box-shadow: 0 0 var(--std-margin) calc(var(--std-margin)/2) var(--ter-color-semi);

	/* Global Layout */
	--square: var(--s300);
	--std-border: 1px;
	--std-input-height: var(--s200);
	--std-margin: var(--s100);
	--std-padding: var(--s100);
	--max-width: 800px;

}

@font-face {
	font-family: TTY;
	src: url('./TTY.ttf');
}


/* ----- GLOBAL RESETS ----- */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	vertical-align: baseline;
}
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
* {
	box-sizing: border-box;
	font-family: TTY;
}
*:focus {
	outline-color: var(--pri-color);
	outline-style: double;
	outline-width: 3px;
	z-index: 3;
}


/* ----- PAGE ----- */

html {
	background-color: #333;
}
html,
#apocalyptia-online,
.screen,
.projection,
.lines,
.console,
.program,
main {
	bottom: 0;
	font-family: TTY;
	left: 0;
	overflow: auto;
	position: absolute;
	right: 0;
	scrollbar-width: none;
	top: 0;
}
body {
	background-color: var(--sec-color-trans);
	color: var(--pri-color);
	font-size: var(--s100);
	height: 100%;
}
.page-body {
	align-content: center;
	display: flex;
	flex-direction: column;
	left: 0;
	overflow: scroll;
	padding: var(--std-padding);
	position: absolute;
	right: 0;
	top: var(--square);
}
.page-body > * {
	margin: 0 auto;
	width: 100%;
	max-width: var(--max-width);
}
form {
	width: 100%;
}
fieldset {
	border: var(--std-border) dotted var(--pri-color);
	width: 100%;
}
.flex-block {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
}
::-webkit-scrollbar {
	display: none;
}

/* Section Card */
.section-card {
	border: var(--std-border) dotted var(--pri-color);
	display: block;
	margin-bottom: var(--std-margin);
	margin-top: var(--std-margin);
	padding: var(--std-padding);
}
.section-card .stat-label {
	font-weight: bold;
	text-align: center;
	width: 100%;
}

/* Center Card */
.cntr-card {
	align-items: center;
	border: calc(var(--std-border) * 2) solid var(--pri-color);
	box-shadow: var(--s50) var(--s50) 2px var(--sec-color-trans);
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	left: 50vw;
	max-width: 800px;
	padding: var(--std-padding);
	position: absolute;
	text-align: center;
	top: 50vh;
	transform: translate(-50%, -50%);
	width: 70vw;
}
.cntr-card a {
	margin: var(--std-margin);
}


/* ----- TEXT ----- */

h1 {
	font-size: var(--s150);
}
h2 {
	font-size: var(--s125);
}
h3 {
	font-size: var(--s110);
}
label {
	display: block;
}
legend {
	margin-left: var(--s150);
}
p {
	line-height: 1.5;
}
.error {
	color: var(--ter-color);
}
.explanation {
	margin: var(--std-margin);
}
.remaining {
	text-align: center;;
}

/* Lists */
ul {
	list-style: none;
}
li {
	margin: var(--s50);
}
.list {
	margin-top: var(--std-margin);
}

/* Table */
table {
	table-layout: fixed;
	text-align: left;
	width: 100%;
}
tr {
	align-content: center;
	align-items: start;
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	height: var(--std-input-height);
	min-width: 100%;
}
td,
th {
	border: var(--std-border) solid var(--pri-color);
	flex: 1;
	overflow-wrap: normal;
	padding: var(--s50);
	word-wrap: break-word;
}


/* ----- CONTROLS ----- */

/* Anchor */
a {
	color: var(--pri-color);
	text-decoration: none;
}
a:hover,
a:focus {
	box-shadow: var(--pri-box-shadow);
}

/* Buttons */
button {
	background-color: var(--sec-color-trans);
	border: var(--std-border) solid var(--pri-color);
	border-radius: var(--radius);
	color: var(--pri-color);
	cursor: pointer;
	font-family: TTY;
	font-size: var(--s100);
	font-weight: bold;
	height: var(--std-input-height);
	text-align: center;
}
/* ... */

